tests/frontend_tests/error_empty_struct.c
// error: expected identifier or member list after 'struct'
struct;

int main() {
  return 0;
}
